# adventofcode2021

./: CMakeLists.txt
day1/: CMakeLists.txt
day1/include/: day1.h
day1/src/: day1part1.c  day1part2.c  input.c
day10/: CMakeLists.txt
day10/include/: day10.h
day10/src/: day10part1.c  day10part2.c  input.c
day11/: CMakeLists.txt
day11/include/: day11.h
day11/src/: day11part1.c  day11part2.c  input.c
day12/: CMakeLists.txt
day12/include/: day12.h
day12/src/: day12part1.c  day12part2.c  input.c
day13/: CMakeLists.txt
day13/include/: day13.h
day13/src/: day13part1.c  day13part2.c  input.c
day14/: CMakeLists.txt
day14/include/: day14.h
day14/src/: day14part1.c  day14part2.c  input.c
day15/: CMakeLists.txt
day15/include/: day15.h
day15/src/: day15part1.c  day15part2.c  input.c
day16/: CMakeLists.txt
day16/include/: day16.h
day16/src/: day16part1.c  day16part2.c  input.c
day17/: CMakeLists.txt
day17/include/: day17.h
day17/src/: day17part1.c  day17part2.c  input.c
day18/: CMakeLists.txt
day18/include/: day18.h
day18/src/: day18part1.c  day18part2.c  input.c
day19/: CMakeLists.txt
day19/include/: day19.h
day19/src/: day19part1.c  day19part2.c  input.c
day2/: CMakeLists.txt
day2/include/: day2.h
day2/src/: day2part1.c  day2part2.c  input.c
day20/: CMakeLists.txt
day20/include/: day20.h
day20/src/: day20part1.c  day20part2.c  input.c
day21/: CMakeLists.txt
day21/include/: day21.h
day21/src/: day21part1.c  day21part2.c  input.c
day22/: CMakeLists.txt
day22/include/: day22.h
day22/src/: day22part1.c  input.c
day24/: CMakeLists.txt
day24/include/: day24.h
day24/src/: day24part1.c  input.c
day25/: CMakeLists.txt
day25/include/: day25.h
day25/src/: day25part1.c  input.c
day3/: CMakeLists.txt
day3/include/: day3.h
day3/src/: day3part1.c  day3part2.c  input.c
day4/: CMakeLists.txt
day4/include/: day4.h
day4/src/: day4part1.c  day4part2.c  input.c
day5/: CMakeLists.txt
day5/include/: day5.h
day5/src/: day5part1.c  day5part2.c  input.c
day6/: CMakeLists.txt
day6/include/: day6.h
day6/src/: day6part1.c  day6part2.c  input.c
day7/: CMakeLists.txt
day7/include/: day7.h
day7/src/: day7part1.c  day7part2.c  input.c
day8/: CMakeLists.txt
day8/include/: day8.h
day8/src/: day8part1.c  day8part2.c  input.c
day9/: CMakeLists.txt
day9/include/: day9.h
day9/src/: day9part1.c  day9part2.c  input.c
shared/: CMakeLists.txt
shared/include/: shared.h
shared/src/: shared.c
