cmake_minimum_required(VERSION 2.6)
add_definitions(-DDEBUG -D_DEBUG)
set(CMAKE_C_FLAGS_DEBUG "-D_DEBUG")
set(CMAKE_BUILD_TYPE Debug)
get_filename_component(PROJECT_ROOT_DIR . ABSOLUTE)
project(advent2021)

set(COMPILE_WARN_OPTIONS -Wall -g -O2)
add_subdirectory(day1)
add_subdirectory(day2)
add_subdirectory(day3)