cmake_minimum_required(VERSION 2.6)
set(CMAKE_BUILD_TYPE Debug)
get_filename_component(PROJECT_ROOT_DIR . ABSOLUTE)
project(advent2021)

set(COMPILE_WARN_OPTIONS -Wall -g -O2)
add_subdirectory(day1)
add_subdirectory(day2)
add_subdirectory(day3)
add_subdirectory(day4)
add_subdirectory(day5)
add_subdirectory(day6)
add_subdirectory(day7)
add_subdirectory(day8)
add_subdirectory(day9)
add_subdirectory(day10)